--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header {
-    background-color: rgb(35, 20, 168);
+    background-color: rgb(32, 40, 146);
 }
 
 nav li {
@@ -55,16 +55,16 @@ nav {
 }
 
 .servicos li:hover {
-    border-color: rgb(35, 21, 156);
+    border-color: rgb(12, 12, 14);
 }
 
 .servicos li:hover h2 {
     font-size: 34px;
-    color: rgb(35, 60, 199);
+    color: rgb(14, 15, 19);
 }
 
 .servicos li:active {
-    border-color: rgb(151, 46, 46);
+    border-color: rgb(209, 201, 201);
     border-width: 4px;
 }
 
@@ -77,6 +77,7 @@ nav {
     font-size: 30px;
     font-weight: bold;
     padding-bottom: 15px;
+    color: black;
 }
 
 .descricao {
